tests/errors/surf_lex_12.ki
# LEXER: a stray '$' character that is not part of any token
var price = $5